--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "@astrojs/check": "^0.3.1",
     "@astrojs/react": "^3.0.7",
     "@astrojs/tailwind": "^5.0.3",
+    "@fontsource-variable/onest": "^5.0.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "animate.css": "^4.1.1",
     "astro": "^4.0.2",
-    "iconoir-react": "^7.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwindcss": "^3.0.24"
