--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^4.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "swiper": "^11.0.5",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
