--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/check": "^0.3.1",
     "@astrojs/react": "^3.0.7",
     "@astrojs/tailwind": "^5.0.3",
+    "@astrojs/vercel": "^7.1.1",
     "@fontsource-variable/onest": "^5.0.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
